--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,103 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(99, 222, 226);
+  font-family: sans-serif;
+  margin: 0;
+
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.sec1 {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.sec1 .c1 {
+  width: 300px;
+  height: 500px;
+  background: linear-gradient(149deg, #0FA4DC 59%, #fff 50%);
+  border-radius: 30px;
+  position: absolute;
+  /* top: 0;
+  bottom: 0;
+  margin: auto;
+  transform: translateX(50px); */
+  overflow: hidden;
+  box-shadow: 2px 4px 6px #00000069;
+}
+
+.sec1 .c2 {
+  width: 86%;
+  height: 81%;
+  background: #fff;
+  border-radius: 30px;
+  position: absolute;
+  transform: translate(2px, 153px) rotate(15deg);
+}
+
+.sec1 .c3 {
+  text-align: center;
+  padding: 10px;
+  font-family: sans-serif;
+  font-weight: 900;
+  font-size: 22px;
+  color: whitesmoke;
+  z-index: 10;
+}
+
+.sec1 .c4 {
+  text-align: center;
+  font-size: 22px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  background-color: #fff;
+  border: 1px solid #0FA4DC;
+  border-radius: 50px;
+  padding: 6px 0;
+  margin: 30px;
+  position: relative;
+  margin-bottom: 10px;
+  cursor: pointer;
+  font-weight: 600;
+  color: #0FA4DC;
+}
+
+.sec1 .c5 {
+  background: #0FA4DC;
+  color: #fff;
+}
+
+.sec1 .c6 {
+  transform: translateY(200px);
+}
+
+.sec1 .c7 {
+  text-align: center;
+  font-family: sans-serif;
+  color: gray;
+  text-transform: capitalize;
+}
+
+.sec1 .c7 span {
+  color: #0FA4DC;
+  font-weight: 900;
+  cursor: pointer;
+}
+
+.sec1 .c8 {
+  color: #fff;
+  font-family: sans-serif;
+  padding: 20px;
+
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.sec1 .c9cc {
+  margin-right: 5px;
 }
